--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
-logo: "DataMerlin.png"
+#logo: "DataMerlin.png"
 
 # Build settings
 #theme: "just-the-docs"
